// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atom | SearchField SearchField should change value 1`] = `
<input
  className="search-field-class"
  onChange={[Function]}
  placeholder="Search..."
  type="search"
  value=""
/>
`;

exports[`Atom | SearchField SearchField should change value 2`] = `
<input
  className="search-field-class"
  onChange={[Function]}
  placeholder="Search..."
  type="search"
  value="This is a test"
/>
`;

exports[`Atom | SearchField SearchField should render 1`] = `
<input
  className="search-field-class"
  onChange={[Function]}
  placeholder="Search..."
  type="search"
  value=""
/>
`;
